Notifications can now be populated with actions buttons.

--- a/src/Info.plist
+++ b/src/Info.plist
@@ -40,5 +40,7 @@
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSUserNotificationAlertStyle</key>
+	<string>alert</string>
 </dict>
 </plist>
