font_styles are now fully applied from configuration.

--- a/share/introduction.config
+++ b/share/introduction.config
@@ -50,16 +50,17 @@
   },
   "font_styles": {
     "notification": {
-      "italic": true
+      "italic": false
     },
     "splash": {
-      "points": 16
+      "points": 30
     },
     "details": {
-      "points": 10
+      "points": 12,
+      "italic": true
     },
     "title": {
-      "points": 18,
+      "points": 14,
       "bold": true,
       "family": "normal"
     }
