Fine polished title and details label alignments on the main window.

--- a/share/introduction.config
+++ b/share/introduction.config
@@ -77,8 +77,8 @@
         "icon": "image:logo"
       },
       {
-        "title": "A long title is cut. One, two, three, four, five, six,\nseven, eight, nine, ten.",
-	"details": "However, long details wrap down ONCE! on a new line: One, two, three, four, five, six, seven, eight, nine, ten.",
+        "title": "A long title is cut. One, two, three, four, five, six, seven, eight, nine, ten.",
+	    "details": "However, long details wrap down ONCE! on a new line: One, two, three, four, five, six, seven, eight, nine, ten.",
         "id": "longTitle",
         "icon": "image:sync"
       },
