Demo config now uses the new action_items syntax.

--- a/share/stage1.conf
+++ b/share/stage1.conf
@@ -99,7 +99,7 @@
     "show": false,
     "close_quits": false,
     "initial_notification": "",
-    "actions": [
+    "action_items": [
       {
         "position": "first",
         "op": "show_url",
