--- a/src/Info.plist
+++ b/src/Info.plist
@@ -41,6 +41,6 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSUserNotificationAlertStyle</key>
-	<string>alert</string>
+	<string>banner</string>
 </dict>
 </plist>
