Cookies, if specified, will accompany get_url and post_url.

--- a/share/stage1.conf
+++ b/share/stage1.conf
@@ -1,5 +1,15 @@
 {
+  "http_cookies": {
+    "localhost:5000": {
+      "session": "foobar",
+      "id": "1337"
+    },
+"127.0.0.1:5001": {
+    "name":"joee"
+},
+  },
   "_never_run_from_dmg" : true,
+  "_status_bar_popover_message" : "Hint: Click me!",
   "indicator": {
     "menu_items": [
       {
@@ -110,6 +120,26 @@
         ],
         "label": "Browse Dilbert"
       },
+        {
+            "id": "test_get_url",
+            "type":"button",
+            "position": "first",
+            "label": "GET http://localhost:5000/api/values",
+            "op": "get_url",
+            "args": "http://localhost:5000/api/values"
+        },
+        {
+            "id": "test_post_url",
+            "type":"button",
+            "position": "first",
+            "label": "POST http://localhost:5000/api/values",
+            "op": "post_url",
+            "args": {
+                "_url" : "http://localhost:5000/api/values",
+                "name" : "Pétur Ingi Egilsson",
+                "phone" : "53 83 17 41"
+            }
+        },
       {
         "position": "last",
         "op": "quit",
