Updated the config file for development purposes.

--- a/share/stage1.conf
+++ b/share/stage1.conf
@@ -57,7 +57,7 @@
         "op": "quit"
       }
     ],
-    "initial_status": "bookmark"
+    "initial_status": "normal"
   },
   "font_styles": {
     "notification": {
@@ -74,6 +74,12 @@
       "points": 14,
       "bold": true,
       "family": "normal"
+    },
+    "buttons": {
+        "points": 14,
+        "bold": false,
+        "family": "normal",
+        "italic": true
     }
   },
   "app_name": "Mailpile",
@@ -106,10 +112,10 @@
         "icon": "image:normal"
       }
     ],
-    "background": "/Library/Desktop Pictures/Snow.jpg",
+    "background": "image:up",
     "show": false,
     "close_quits": false,
-    "initial_notification": "",
+    "initial_notification": "This is an initial notification.",
     "action_items": [
       {
         "position": "first",
@@ -147,7 +153,7 @@
         "label": "Quit"
       }
     ],
-    "height": 330
+    "height": 250
   },
   "images": {
     "normal": "/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/FavoriteItemsIcon.icns",
