Implemented the application of scoped font styles on status displays.

--- a/share/stage1.conf
+++ b/share/stage1.conf
@@ -80,7 +80,12 @@
         "bold": false,
         "family": "normal",
         "italic": true
-    }
+    },
+      "longTitle_title": {
+          "points": 20,
+          "italic": true,
+          "bold": true
+      },
   },
   "app_name": "Mailpile",
   "app_icon": "/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/FavoriteItemsIcon.icns",
@@ -89,7 +94,7 @@
     "status_displays": [
       {
         "title": "Title",
-	"details": "Details",
+        "details": "Details",
         "id": "shortTitle",
         "icon": "image:logo"
       },
