Issue #38: Fixed a problem in which the progress value of update_splash_screen was incorrectly parsed.

--- a/share/stage1.conf
+++ b/share/stage1.conf
@@ -64,7 +64,7 @@
       "italic": false
     },
     "splash": {
-      "points": 30
+      "points": 12
     },
     "details": {
       "points": 12,
@@ -171,6 +171,7 @@
     "sync": "/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/Sync.icns",
     "working": "/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/ErasingIcon.icns",
     "new-setup": "/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/ToolbarInfo.icns",
-    "error": "/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/AlertStopIcon.icns"
+    "error": "/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/AlertStopIcon.icns",
+    "up": "/Users/petur/Desktop/Up.png"
   }
 }
